--- a/1.1_demo.Rmd
+++ b/1.1_demo.Rmd
@@ -48,45 +48,60 @@ La région est très rurale : **`r prettyNum(round(region$partZRR,1)[3],decimal.
 
 ```{r,echo=F}
 
-region_tab %>%  dplyr::select(Région,Nom,Population,Densité,rang,`Taux femmes`,partZRR,partQPV) %>%
-  left_join(.,basecom %>% group_by(REG) %>%
+region_tab %>%  
+  dplyr::select(Région,Nom,Population,Densité,rang,`Taux femmes`,partZRR,partQPV) %>%
+  left_join(.,basecom %>% 
+              group_by(REG) %>%
               summarise(comm=n()) %>% adorn_totals("row",name="METRO"),
             by=c("Région"="REG")) %>%
   dplyr::rename( "partZRR<sup>1</sup>" = partZRR ,
                  "partQPV<sup>2</sup>" = partQPV ,
                  "Nombre de communes" = comm) %>%
   dplyr::relocate("Nombre de communes",.after="Population")  %>%
+  
   kable("html", format.args = list(decimal.mark = ",", big.mark = " "),
-      align="clrrrccll",
-      escape = F) %>% 
+      align="clrrrccll", escape = F) %>% 
   kable_styling("hover", full_width = F) %>%
-  row_spec(which(region$REG=='27'),background = "#E0FFFF75",  bold = T , color = "steelblue")%>%
-  row_spec(nrow(region_tab),bold = T,color = "navy") %>%
-  footnote(general = " Insee RP2019", general_title = "Source : ",
-           number = c("Zone de Revitalisation Rurale 2018 \n","Population des quartiers politique de la ville (QPV) 2018/population RP 2019"), footnote_as_chunk = T) 
+  row_spec(which(region$REG=='27'),
+           background = "#E0FFFF75",  bold = T , color = "steelblue")%>%
+  row_spec(nrow(region_tab),
+           bold = T,color = "navy") %>%
+  footnote(general = " Insee RP2019", 
+           general_title = "Source : ",
+           number = c("Zone de Revitalisation Rurale 2018 \n",
+                      "Population des quartiers politique de la ville (QPV) 2018/population RP 2019"), 
+           footnote_as_chunk = T) 
 
 ```
 
 ### Carte régionale
 
 ```{r}
-leaflet(regwgs) %>% addProviderTiles(providers$CartoDB.Positron) %>% 
+leaflet(regwgs) %>% 
+  addProviderTiles(providers$CartoDB.Positron) %>% 
   setView(lng = 5.1, lat = 47.27, zoom = 6) %>%
-  addPolygons(weight=2,opacity = 0.6,color = "#2F4F4F", fill=F, smoothFactor = 2) %>%
-addPolygons(data=ZRR, group  = "ZRR",fill = T,fillOpacity = 0.4,fillColor = "#6B8E23", stroke=F,weight = 1, smoothFactor = 2) %>%  
-  addPolygons(data=reg27carto,group  = "BFC",fill = F,color="#9370DB",weight = 5, opacity = 1, smoothFactor = 5) %>%
+  addPolygons(color = "#2F4F4F", weight=2, opacity = 0.6, 
+              fill=F, smoothFactor = 2) %>%
+  addPolygons(data=ZRR, group  = "ZRR",
+              fillColor = "#6B8E23", fillOpacity = 0.4,  
+              fill = T, stroke=F, smoothFactor = 2) %>%
+  addPolygons(data=reg27carto,group  = "BFC",
+              color="#9370DB", weight = 5, opacity = 1,
+              fill = F,smoothFactor = 5) %>%
   addCircles(centroid(regwgs)[,1],centroid(regwgs)[,2],
-             group = "region", radius = 50*regwgs$pop^(1/2), weight=4,
-             color = "#4169E1", opacity = 0.8,
+             group = "region", radius = 50*regwgs$pop^(1/2), 
+             color = "#4169E1",weight=4, opacity = 0.8,
              fillColor = "#FFFFFF", fillOpacity = 0.3,
-             highlight = highlightOptions (fillOpacity =  0.1,
-             weight = 5,   color = "#00FFFF"),
+             highlight = highlightOptions (
+                            color = "#00FFFF", weight = 5, fillOpacity =  0.1 ),
              popup = popupTable(regwgs@data %>% 
-                                   dplyr::select(Région=INSEE_REG) %>%
-                                   left_join(.,region_tab %>% dplyr::select(Région,Nom,Population,Densité,rang,`Taux femmes`,partZRR,partQPV)
-                                             ,by="Région"),
-                                 feature.id=F,row.numbers = F)) %>%
-addLegend( position = "bottomright",colors = "#6B8E23",labels = "Zones de Revitalisation Rurale")
+                                  dplyr::select(Région=INSEE_REG) %>%
+                                  left_join(.,region_tab %>% 
+                                              dplyr::select(Région,Nom,Population,Densité,rang,
+                                                             `Taux femmes`,partZRR,partQPV),
+                                            by="Région"),
+                                feature.id=F,row.numbers = F)) %>%
+  addLegend( position = "bottomright",colors = "#6B8E23",labels = "Zones de Revitalisation Rurale")
 ```
 
 # ![](images/BFC_dep_s.svg) Départements {data-orientation="rows" height="20"}
@@ -105,23 +120,34 @@ La densité dépasse 230 habitants par km² dans le Territoire de Belfort et att
 
 ```{r,echo=F}
 
-dep27_tab %>%  dplyr::select(Région,Département,Nom,Population,Densité,rang,rang_national,`Taux femmes`,partZRR,partQPV) %>%
-  left_join(.,basecom %>% filter (DEP %in% depbfc) %>% group_by(DEP) %>% 
-              summarise(comm=n()) %>% adorn_totals("row",name="BFC") %>%
-              bind_rows(.,basecom %>% group_by () %>% summarise(DEP="METRO", comm=n())),
+dep27_tab %>%  
+  dplyr::select(Région,Département,Nom,Population,Densité,rang,rang_national,`Taux femmes`,partZRR,partQPV) %>%
+  left_join(.,basecom %>% 
+              filter (DEP %in% depbfc) %>% 
+              group_by(DEP) %>% 
+              summarise(comm=n()) %>% 
+              adorn_totals("row",name="BFC") %>%
+              bind_rows(.,basecom %>% 
+                          group_by () %>% 
+                          summarise(DEP="METRO", comm=n())),
             by=c("Département"="DEP")) %>%
   dplyr::rename( "partZRR<sup>1</sup>" = partZRR ,
                  "partQPV<sup>2</sup>" = partQPV ,
                  "Nombre de communes" = comm) %>%
   dplyr::relocate("Nombre de communes",.after="Population")  %>%
+  
   kable("html", format.args = list(decimal.mark = ",", big.mark = " "),
-        align="cclrrrcccll",
-        escape = F) %>% 
+        align="cclrrrcccll", escape = F) %>% 
   kable_styling("hover", full_width = F) %>%
-  row_spec(nrow(dep27_tab)-1,bold = T,color = "steelblue") %>%
-  row_spec(nrow(dep27_tab),bold = T,color = "navy") %>%
-  footnote(general = " Insee RP2019", general_title = "Source : ",
-           number = c("Zone de Revitalisation Rurale 2018 \n","Population des quartiers politique de la ville (QPV) 2018/population RP 2019"), footnote_as_chunk = T)
+  row_spec(nrow(dep27_tab)-1,
+           bold = T,color = "steelblue") %>%
+  row_spec(nrow(dep27_tab),
+           bold = T,color = "navy") %>%
+  footnote(general = " Insee RP2019", 
+           general_title = "Source : ",
+           number = c("Zone de Revitalisation Rurale 2018 \n",
+                      "Population des quartiers politique de la ville (QPV) 2018/population RP 2019"), 
+           footnote_as_chunk = T)
 
 
 ```
@@ -129,24 +155,35 @@ dep27_tab %>%  dplyr::select(Région,Département,Nom,Population,Densité,rang,r
 ### Carte départementale
 
 ```{r}
-leaflet(depwgs) %>% addProviderTiles(providers$CartoDB.Positron) %>%
+leaflet(depwgs) %>% 
+  addProviderTiles(providers$CartoDB.Positron) %>%
   setView(lng = 5.1, lat = 47.27, zoom = 6) %>%
-  addPolygons(weight=2,opacity = 0.6,color = "#2F4F4F", fill=F, smoothFactor = 2 ) %>%
-  addPolygons(data=densitewgs,fillColor = ~pal(Typdgrd), stroke = F,
-              fillOpacity = 0.5, group = "densite" ) %>%  
-addPolygons(data=reg27carto,group  = "BFC",fill = F,color="#9370DB",weight = 5,opacity = 1, smoothFactor = 5) %>%
-  addPolygons(data=dep27carto,group  = "départements",fill = F,color="#9370DB",weight = 3,opacity = 1, smoothFactor = 5) %>%
+  addPolygons(color = "#2F4F4F", weight=2, opacity = 0.6, 
+              fill=F, smoothFactor = 2 ) %>%
+  addPolygons(data=densitewgs,
+              fillColor = ~pal(Typdgrd), fillOpacity = 0.5,
+              stroke = F, group = "densite" ) %>%  
+  addPolygons(data=reg27carto,group  = "BFC",
+              color="#9370DB",weight = 5, opacity = 1, 
+              fill = F, smoothFactor = 5) %>%
+  addPolygons(data=dep27carto,group  = "départements",
+              color="#9370DB",weight = 3,opacity = 1, 
+              fill = F, smoothFactor = 5) %>%
   addCircles(centroid(depwgs)[,1],centroid(depwgs)[,2],group = "BV",
-               radius = 50*depwgs$pop^(1/2), color = "#4169E1", opacity = 0.8,weight=4,
-               fillColor = "#FFFFFF", fillOpacity = 0.3,
-               highlight = highlightOptions (fillOpacity =  0.1,
-               weight = 5,   color = "#00FFFF"),
-               popup = popupTable(depwgs@data %>% 
-                                   dplyr::select(Département=INSEE_DEP) %>%
-                                   left_join(.,dep_tab %>% dplyr::select(Région,Département,Nom,Population,Densité,rang,`Taux femmes`,partZRR,partQPV)
-                                             ,by="Département"),
+             radius = 50*depwgs$pop^(1/2), 
+             color = "#4169E1", opacity = 0.8,weight=4,
+             fillColor = "#FFFFFF", fillOpacity = 0.3,
+             highlight = highlightOptions (
+                          color = "#00FFFF" , fillOpacity =  0.1,weight = 5 ),
+             popup = popupTable(depwgs@data %>% 
+                                  dplyr::select(Département=INSEE_DEP) %>%
+                                  left_join(.,dep_tab %>%
+                                              dplyr::select(Région,Département,Nom,Population,Densité,
+                                                            rang,`Taux femmes`,partZRR,partQPV)
+                                            ,by="Département"),
                                  feature.id=F,row.numbers = F)) %>%
-  addLegend(pal = pal, values = unique(densitewgs$Lblldgr), opacity = 0.7, title = "grille densité 7 niveaux", position = "bottomright") 
+  addLegend(pal = pal, values = unique(densitewgs$Lblldgr), opacity = 0.7, 
+            title = "grille densité 7 niveaux", position = "bottomright") 
 
 ```
 
@@ -159,51 +196,77 @@ addPolygons(data=reg27carto,group  = "BFC",fill = F,color="#9370DB",weight = 5,o
 ### Comparaisons établissements publics de coopération intercommunale
 
 ```{r,echo=F}
-epci27_tab %>%  dplyr::select(EPCI,Nom,Population,Densité,rang,`Taux femmes`,partZRR,partQPV) %>%
-  left_join(.,basecom %>% group_by(EPCI) %>% summarise(comm=n())  %>%
-              bind_rows(.,basecom %>% filter (DEP %in% depbfc) %>% group_by () %>% summarise(EPCI="BFC", comm=n())) %>%
-              bind_rows(.,basecom %>% group_by () %>% summarise(EPCI="METRO", comm=n())),
+epci27_tab %>%  
+  dplyr::select(EPCI,Nom,Population,Densité,rang,`Taux femmes`,partZRR,partQPV) %>%
+  left_join(.,basecom %>% 
+              group_by(EPCI) %>% 
+              summarise(comm=n())  %>%
+              bind_rows(.,basecom %>% 
+                          filter (DEP %in% depbfc) %>% 
+                          group_by () %>% 
+                          summarise(EPCI="BFC", comm=n())) %>%
+              bind_rows(.,basecom %>% 
+                          group_by () %>% 
+                          summarise(EPCI="METRO", comm=n())),
             by="EPCI") %>%
   dplyr::rename( "partZRR<sup>1</sup>" = partZRR ,
                  "partQPV<sup>2</sup>" = partQPV ,
                  "Nombre de communes" = comm) %>%
   dplyr::relocate("Nombre de communes",.after="Population")  %>%
+  
   kable("html", format.args = list(decimal.mark = ",", big.mark = " "),
-        align="clrrrccll",
-        escape = F) %>% 
+        align="clrrrccll", escape = F) %>% 
   kable_styling("hover", full_width = F) %>%
-  row_spec(nrow(epci27_tab)-1,bold = T,color = "steelblue") %>%
-  row_spec(nrow(epci27_tab),bold = T,color = "navy") %>%
-  footnote(general = " Insee RP2019", general_title = "Source : ",
-           number = c("Zone de Revitalisation Rurale 2018 \n","Population des quartiers politique de la ville (QPV) 2018/population RP 2019"), footnote_as_chunk = T)
+  row_spec(nrow(epci27_tab)-1,
+           bold = T,color = "steelblue") %>%
+  row_spec(nrow(epci27_tab),
+           bold = T,color = "navy") %>%
+  footnote(general = " Insee RP2019", 
+           general_title = "Source : ",
+           number = c("Zone de Revitalisation Rurale 2018 \n",
+                      "Population des quartiers politique de la ville (QPV) 2018/population RP 2019"), 
+           footnote_as_chunk = T)
 ```
 
 ### Carte ECPI
 
 
 ```{r}
-leaflet(epcicarto) %>% addProviderTiles(providers$CartoDB.Positron) %>%
+leaflet(epcicarto) %>% 
+  addProviderTiles(providers$CartoDB.Positron) %>%
   setView(lng = 5.1, lat = 47.27, zoom = 8) %>%
-  addPolygons(data=densiteBFC,fillColor = ~pal(Typdgrd), stroke = F,
-              fillOpacity = 0.5, group = "densite", ) %>%  
-  addPolygons(weight=2,opacity = 1,color = "#2F4F4F", fill=F ) %>%
-  addPolygons(data=reg27carto,group  = "BFC",fill = F,color="#9370DB",weight = 5,opacity = 1, smoothFactor = 5) %>%
-  addPolygons(data=dep27carto,group  = "départements",fill = F,color="#9370DB",weight = 3,opacity = 1, smoothFactor = 5) %>%
+  addPolygons(data=densiteBFC,
+              fillColor = ~pal(Typdgrd),  fillOpacity = 0.5,
+              stroke = F, group = "densite", ) %>%  
+  addPolygons(color = "#2F4F4F", weight=2,opacity = 1,
+              fill=F ) %>%
+  addPolygons(data=reg27carto,group  = "BFC",
+              color="#9370DB",weight = 5,opacity = 1, 
+              fill = F, smoothFactor = 5) %>%
+  addPolygons(data=dep27carto,group  = "départements",
+              color="#9370DB",weight = 3,opacity = 1, 
+              fill = F, smoothFactor = 5) %>%
   addCircles(centroid(epcicarto)[,1],centroid(epcicarto)[,2],group = "BV",
-               radius = 50*epcicarto$pop^(1/2), color = "#4169E1", opacity = 0.8,weight=4,
-               fillColor = "#FFFFFF", fillOpacity = 0.3,
-               highlight = highlightOptions (fillOpacity =  0.1,
-               weight = 5,   color = "#00FFFF"),
-               popup = popupTable(epcicarto@data %>% 
-                                   dplyr::select(EPCI=CODE_EPCI) %>%
-                                   left_join(.,epci27_tab %>% dplyr::select(EPCI,Nom,Population,Densité,rang,`Taux femmes`,partZRR,partQPV)
-                                             ,by="EPCI"),
+             radius = 50*epcicarto$pop^(1/2), 
+             color = "#4169E1", opacity = 0.8,weight=4,
+             fillColor = "#FFFFFF", fillOpacity = 0.3,
+             highlight = highlightOptions (
+                              color = "#00FFFF", weight = 5, fillOpacity =  0.1),
+             popup = popupTable(epcicarto@data %>%
+                                  dplyr::select(EPCI=CODE_EPCI) %>%
+                                  left_join(.,epci27_tab %>% 
+                                              dplyr::select(EPCI,Nom,Population,Densité,rang,
+                                                           `Taux femmes`,partZRR,partQPV)
+                                            ,by="EPCI"),
                                  feature.id=F,row.numbers = F)) %>% 
-  addPolygons(data=QPV27, group  = "QPV",fill = T,color="#2F4F4F",weight = 2,
-              highlight = highlightOptions (fillOpacity =  0.4,
-             weight = 5,   color = "#000080"),
+  addPolygons(data=QPV27, group  = "QPV",
+              color="#2F4F4F", weight = 2,
+              fill = T,
+              highlight = highlightOptions (
+                          color = "#000080",  weight = 5, fillOpacity =  0.4 ),
               popup = sprintf("QP : %s <br> pop : %.0f",QPV27$LIBGEO,QPV27$POP_MUN )) %>%
-  addLegend(pal = pal, values = unique(densiteBFC$Lblldgr), opacity = 0.7, title = "grille densité 7 niveaux", position = "bottomright")    
+  addLegend(pal = pal, values = unique(densiteBFC$Lblldgr), opacity = 0.7, 
+            title = "grille densité 7 niveaux", position = "bottomright")    
 
 ```
 
@@ -216,47 +279,73 @@ leaflet(epcicarto) %>% addProviderTiles(providers$CartoDB.Positron) %>%
 ### Comparaisons bassins de vie
 
 ```{r,echo=F}
-bv27_tab %>%  dplyr::select(BV2012,Nom,Population,Densité,rang,`Taux femmes`,partZRR,partQPV) %>%
-  left_join(.,basecom %>% group_by(BV2012) %>% summarise(comm=n())  %>%
-              bind_rows(.,basecom %>% filter (DEP %in% depbfc) %>% group_by () %>% summarise(BV2012="BFC", comm=n())) %>%
-              bind_rows(.,basecom %>% group_by () %>% summarise(BV2012="METRO", comm=n())),
+bv27_tab %>%  
+  dplyr::select(BV2012,Nom,Population,Densité,rang,`Taux femmes`,partZRR,partQPV) %>%
+  left_join(.,basecom %>% 
+              group_by(BV2012) %>% 
+              summarise(comm=n())  %>%
+              bind_rows(.,basecom %>% 
+                          filter (DEP %in% depbfc) %>% 
+                          group_by () %>% 
+                          summarise(BV2012="BFC", comm=n())) %>%
+              bind_rows(.,basecom %>% 
+                          group_by () %>% 
+                          summarise(BV2012="METRO", comm=n())),
             by="BV2012") %>%
   dplyr::rename( "partZRR<sup>1</sup>" = partZRR ,
                  "partQPV<sup>2</sup>" = partQPV ,
                  "Nombre de communes" = comm) %>%
   dplyr::relocate("Nombre de communes",.after="Population") %>%
+  
   kable("html", format.args = list(decimal.mark = ",", big.mark = " "),
-        align="clrrrccll",
-        escape = F) %>% 
+        align="clrrrccll", escape = F) %>% 
   kable_styling("hover", full_width = F) %>%
-  row_spec(nrow(bv27_tab)-1,bold = T,color = "steelblue") %>%
-  row_spec(nrow(bv27_tab),bold = T,color = "navy") %>%
-  footnote(general = " Insee RP2019", general_title = "Source : ",
-           number = c("Zone de Revitalisation Rurale 2018 \n","Population des quartiers politique de la ville (QPV) 2018/population RP 2019"), footnote_as_chunk = T)
+  row_spec(nrow(bv27_tab)-1,
+           bold = T,color = "steelblue") %>%
+  row_spec(nrow(bv27_tab),
+           bold = T,color = "navy") %>%
+  footnote(general = " Insee RP2019", 
+           general_title = "Source : ",
+           number = c("Zone de Revitalisation Rurale 2018 \n",
+                      "Population des quartiers politique de la ville (QPV) 2018/population RP 2019"), 
+           footnote_as_chunk = T)
 ```
 
 ### Carte BV
 
 ```{r}
-leaflet(bvcarto) %>% addProviderTiles(providers$CartoDB.Positron) %>%
+leaflet(bvcarto) %>% 
+  addProviderTiles(providers$CartoDB.Positron) %>%
   setView(lng = 5.1, lat = 47.27, zoom = 8) %>%
-  addPolygons(data=ZRR, group  = "ZRR",fill = T,fillOpacity = 0.4,fillColor = "#6B8E23", stroke=F,weight = 1, smoothFactor = 2) %>%
-  addPolygons(weight=2,opacity = 1,color = "#2F4F4F", fill=F ) %>%
-  addPolygons(data=reg27carto,group  = "BFC",fill = F,color="#9370DB",weight = 5,opacity = 1, smoothFactor = 5) %>%
-  addPolygons(data=dep27carto,group  = "départements",fill = F,color="#9370DB",weight = 3,opacity = 1, smoothFactor = 5) %>%
-  addCircles(centroid(bvcarto)[,1],centroid(bvcarto)[,2],group = "BV",weight=4,
-               radius = 50*bvcarto$pop^(1/2), color = "#4169E1", opacity = 0.8,
-               fillColor = "#FFFFFF", fillOpacity = 0.3,
-               highlight = highlightOptions (fillOpacity =  0.1,
-               weight = 5,   color = "#00FFFF"),
+  addPolygons(data=ZRR, group  = "ZRR",
+              fillColor = "#6B8E23", fill = T, fillOpacity = 0.4, 
+              stroke=F, smoothFactor = 2) %>%
+  addPolygons(color = "#2F4F4F", weight=2,opacity = 1,
+              fill=F ) %>%
+  addPolygons(data=reg27carto,group  = "BFC",
+              color="#9370DB",weight = 5,opacity = 1, 
+              fill = F, smoothFactor = 5) %>%
+  addPolygons(data=dep27carto,group  = "départements",
+              color="#9370DB",weight = 3,opacity = 1, 
+              fill = F, smoothFactor = 5) %>%
+  addCircles(centroid(bvcarto)[,1],centroid(bvcarto)[,2],group = "BV",
+             radius = 50*bvcarto$pop^(1/2), 
+             color = "#4169E1", weight=4, opacity = 0.8,
+             fillColor = "#FFFFFF", fillOpacity = 0.3,
+               highlight = highlightOptions (
+                             color = "#00FFFF", fillOpacity =  0.1, weight = 5 ),
                popup = popupTable(bvcarto@data %>% 
-                                   dplyr::select(BV2012) %>%
-                                   left_join(.,bv27_tab %>% dplyr::select(BV2012,Nom,Population,Densité,rang,`Taux femmes`,partZRR,partQPV)
-                                             ,by="BV2012"),
+                                    dplyr::select(BV2012) %>%
+                                    left_join(.,bv27_tab %>% 
+                                                dplyr::select(BV2012,Nom,Population,Densité,
+                                                              rang,`Taux femmes`,partZRR,partQPV)
+                                              ,by="BV2012"),
                                  feature.id=F,row.numbers = F)) %>%  
-  addPolygons(data=QPV27, group  = "QPV",fill = T,color="#2F4F4F",weight = 2,
-              highlight = highlightOptions (fillOpacity =  0.4,
-             weight = 5,   color = "#000080"),
+  addPolygons(data=QPV27, group  = "QPV",
+              color="#2F4F4F",weight = 2, 
+              fill = T,
+              highlight = highlightOptions (
+                              color = "#000080", weight = 5, fillOpacity =  0.4 ),
               popup = sprintf("QP : %s <br> pop : %.0f",QPV27$LIBGEO,QPV27$POP_MUN )) %>%
   addLegend( position = "bottomright",colors = "#6B8E23",labels = "Zones de Revitalisation Rurale")
 
@@ -272,12 +361,15 @@ leaflet(bvcarto) %>% addProviderTiles(providers$CartoDB.Positron) %>%
 ### Appartenance communale
 
 ```{r}
-basecom %>% filter(REG=='27') %>% select(CODGEO:SUPERF) %>%
+basecom %>% 
+  filter(REG=='27') %>% 
+  select(CODGEO:SUPERF) %>%
+  
   kable("html", format.args = list(decimal.mark = ",", big.mark = " "),
-        align="clrrrrrrrrrrrrrrrrrr",
-        escape = F) %>% 
+        align="clrrrrrrrrrrrrrrrrrr", escape = F) %>% 
   kable_styling("hover", full_width = F) %>%
-  footnote(general = "Insee, Code officiel géographique", general_title = "Source : ",
+  footnote(general = "Insee, Code officiel géographique", 
+           general_title = "Source : ",
            #number = c("Insee-grille de densité 2020, Insee-RP 2018, ANCT-CRTE au 19/01/2022"),
            footnote_as_chunk = T)
   
@@ -302,12 +394,16 @@ leaflet() %>%
   addProviderTiles(providers$SafeCast, group="safecast") %>%
   addProviderTiles(providers$WaymarkedTrails.slopes, group="slopes") %>%
   setView(lng = 5.1, lat = 47.27, zoom = 8) %>%
-  addPolygons(data=reg27carto,group  = "BFC",fill = F,color="#9370DB",weight = 5,opacity = 1, smoothFactor = 5) %>%
-  addPolygons(data=dep27carto,group  = "départements",fill = F,color="#9370DB",weight = 3,opacity = 1, smoothFactor = 5) %>%
-addLayersControl(
-    baseGroups = c("OSM","OSM France", "Topographie","Geoportail", "Geoportail.ortho","Geoportail.plan","vélo","NASA", "hydro"),
-    overlayGroups = c("rando","cycle","routes","safecast","slopes"),
-    options = layersControlOptions(collapsed = F,autoZIndex = F))
+  addPolygons(data=reg27carto,group  = "BFC",
+              color="#9370DB",weight = 5,opacity = 1, 
+              fill = F, smoothFactor = 5) %>%
+  addPolygons(data=dep27carto,group  = "départements",
+              color="#9370DB",weight = 3,opacity = 1, 
+              fill = F, smoothFactor = 5) %>%
+  addLayersControl( baseGroups = c("OSM","OSM France", "Topographie","Geoportail",
+                                 "Geoportail.ortho","Geoportail.plan","vélo","NASA", "hydro"),
+                  overlayGroups = c("rando","cycle","routes","safecast","slopes"),
+                  options = layersControlOptions(collapsed = F,autoZIndex = F))
 ```
 
 # `r fa(name = "fas fa-tree")` CRTE {data-orientation="rows" height="20"}
@@ -319,23 +415,30 @@ addLayersControl(
 ### Contrats de relance et de transistion écologique
 
 ```{r}
-crte %>% distinct(id_crte,lib_crte,SH_RUR_CRTE,TYPO_RURB_CRTE)%>% 
+crte %>% 
+  distinct(id_crte,lib_crte,SH_RUR_CRTE,TYPO_RURB_CRTE)%>% 
   arrange(id_crte)%>%
   mutate(SH_RUR_CRTE=color_bar(ifelse(SH_RUR_CRTE<50,"#00bfff", "#90ee90"))
-                             (digits(SH_RUR_CRTE,1,decimal.mark=",") ) ) %>%
+                              (digits(SH_RUR_CRTE,1,decimal.mark=",") ) ) %>%
   select("Identifiant CRTE"=id_crte,"Libellé CRTE"=lib_crte,
                 "Part de population rurale dans le CRTE d'appartenance (%)<sup>1</sup>" = SH_RUR_CRTE,
                 "Typologie urbain/rural du CRTE d'appartenance<sup>1</sup>" = TYPO_RURB_CRTE) %>%
-      kable("html", format.args = list(decimal.mark = ",", big.mark = " "),
-        align="cllc",
-        escape = F) %>% 
+  
+  kable("html", format.args = list(decimal.mark = ",", big.mark = " "),
+        align="cllc", escape = F) %>% 
   kable_styling("hover", full_width = F) %>%
-  row_spec(which (crte%>%distinct(id_crte,TYPO_RURB_CRTE)%>% arrange(id_crte)%>%select(TYPO_RURB_CRTE)%>% pull
-    =="RURAL") ,bold = F,color = "#006400") %>%
-    row_spec(which (crte%>%distinct(id_crte,TYPO_RURB_CRTE)%>% arrange(id_crte)%>%select(TYPO_RURB_CRTE)%>% pull
-    !="RURAL") ,bold = T) %>%
-  footnote(general = "ANCT - Observatoire des territoires 2022", general_title = "Source : ",
-           number = c("Insee-grille de densité 2020, Insee-RP 2018, ANCT-CRTE au 19/01/2022"), footnote_as_chunk = T)
+  row_spec(which (crte%>%distinct(id_crte,TYPO_RURB_CRTE) %>%
+                    arrange(id_crte) %>% 
+                    select(TYPO_RURB_CRTE) %>% pull =="RURAL") , 
+           bold = F,color = "#006400") %>%
+  row_spec(which (crte%>%distinct(id_crte,TYPO_RURB_CRTE) %>%
+                    arrange(id_crte) %>% 
+                    select(TYPO_RURB_CRTE)%>% pull !="RURAL") ,
+           bold = T) %>%
+  footnote(general = "ANCT - Observatoire des territoires 2022", 
+           general_title = "Source : ",
+           number = c("Insee-grille de densité 2020, Insee-RP 2018, ANCT-CRTE au 19/01/2022"), 
+           footnote_as_chunk = T)
 
 
 ```
@@ -351,17 +454,21 @@ crte %>% distinct(id_crte,lib_crte,SH_RUR_CRTE,TYPO_RURB_CRTE)%>%
 > -   située en CRTE dit "rural"
 
 ```{r}
-crte %>% select("Code commune au 1er janvier 2021"=CODGEO,"Nom de la commune"=LIBGEO,
-                "Identifiant CRTE"=id_crte,"CRTE d'appartenance"=lib_crte,
-                "Typologie urbain/rural du CRTE d'appartenance<sup>1</sup>" = TYPO_RURB_CRTE,
-                "Dans/Hors filtre ANS<sup>2</sup>"= FILTRE_ANS) %>%
-        kable("html", format.args = list(decimal.mark = ",", big.mark = " "),
-        align="cllc",
-        escape = F) %>% 
+crte %>% 
+  select("Code commune au 1er janvier 2021"=CODGEO,"Nom de la commune"=LIBGEO,
+         "Identifiant CRTE"=id_crte,"CRTE d'appartenance"=lib_crte,
+         "Typologie urbain/rural du CRTE d'appartenance<sup>1</sup>" = TYPO_RURB_CRTE,
+         "Dans/Hors filtre ANS<sup>2</sup>"= FILTRE_ANS) %>%
+  
+  kable("html", format.args = list(decimal.mark = ",", big.mark = " "),
+        align="cllc", escape = F) %>% 
   kable_styling("hover", full_width = F) %>%
-  row_spec(which (crte%>%select(FILTRE_ANS)%>% pull == "IN") ,bold = F,color = "#006400") %>%
-  row_spec(which (crte%>%select(FILTRE_ANS)%>% pull != "IN") ,bold = T) %>%  
-  footnote(general = "ANCT - Observatoire des territoires 2022", general_title = "Source : ",
+  row_spec(which (crte %>% select(FILTRE_ANS) %>% pull == "IN") ,
+           bold = F,color = "#006400") %>%
+  row_spec(which (crte%>%select(FILTRE_ANS)%>% pull != "IN") ,
+           bold = T) %>%  
+  footnote(general = "ANCT - Observatoire des territoires 2022", 
+           general_title = "Source : ",
            number = c("Insee-grille de densité 2020, Insee-RP 2018, ANCT-CRTE au 19/01/2022",
                       "ANCT - traitements de l'Observatoire des territoires, 2022"), 
            footnote_as_chunk = T)
@@ -371,20 +478,27 @@ crte %>% select("Code commune au 1er janvier 2021"=CODGEO,"Nom de la commune"=LI
 
 ```{r}
 
-leaflet(zonage_crte) %>% addProviderTiles(providers$OpenStreetMap) %>%
-        setView(lng = 5.1, lat = 47.27, zoom = 8) %>%
-        addPolygons(fill =T , weight = 1,opacity = 0.6,
-                    fillColor  = ~palcrte(SH_RUR_CRTE),fillOpacity = 0.5,
-                    color = "#006400",
+leaflet(zonage_crte) %>% 
+  addProviderTiles(providers$OpenStreetMap) %>%
+  setView(lng = 5.1, lat = 47.27, zoom = 8) %>%
+  addPolygons(fill =T , fillColor  = ~palcrte(SH_RUR_CRTE),fillOpacity = 0.5,
+              color = "#006400", weight = 1,opacity = 0.6,
               popup = popupTable(zonage_crte)) %>%
-        addPolygons(data=reg27carto,group  = "BFC",fill = F,color="#9370DB",weight = 3,opacity = 1) %>%
-        addPolygons(data=dep27carto,group  = "départements",fill = F,color="#9370DB",weight = 2,opacity = 1) %>%
-        addPolygons(data=subset(crte_carto,FILTRE_ANS == "IN" &
-                                  TYPO_RURB_CRTE == "URBAIN" ), 
-                    group  = "CRTE",fill = F,color="#ffd700",weight = 1,opacity = 1) %>%
+  addPolygons(data=reg27carto,group  = "BFC",
+              color="#9370DB",weight = 3,opacity = 1,
+              fill = F,) %>%
+  addPolygons(data=dep27carto,group  = "départements",
+              color="#9370DB",weight = 2,opacity = 1,
+              fill = F) %>%
+  addPolygons(data=subset(crte_carto,FILTRE_ANS == "IN" &
+                            TYPO_RURB_CRTE == "URBAIN" ), group  = "CRTE",
+              color="#ffd700",weight = 1,opacity = 1,
+              fill = F) %>%
   addLegend("bottomright", 
             colors =c("#dcdcdc", "#008000","#ffd700"),
-            labels= c("CRTE urbain (<50% population rurale)","CRTE rural (>=50% population rurale)","Communes éligibles bien qu'en CRTE urbain"),
+            labels= c("CRTE urbain (<50% population rurale)",
+                      "CRTE rural (>=50% population rurale)",
+                      "Communes éligibles bien qu'en CRTE urbain"),
             title= "Part de population rurale dans le CRTE d'appartenance ",
             opacity = 0.8) 
 ```
