--- a/1.2_structure.Rmd
+++ b/1.2_structure.Rmd
@@ -43,16 +43,19 @@ region_tab %>%
   select(Région,Nom,Population,`15-29 ans`,`Taux<br>15/29`, `Taux femmes<br>15/29`,
          `65 ans et +`,`Taux<br>>65 ans`,`Taux femmes<br>>65 ans`, ind_jeun) %>%
   rename("indice jeunesse <sup>1</sup>"=ind_jeun) %>%
-  kable("html", 
-      format.args = list(decimal.mark = ",", big.mark = "'"),
-      align="clrrlcrlcc",
-      escape = F) %>% 
+  
+  kable("html", format.args = list(decimal.mark = ",", big.mark = "'"),
+      align="clrrlcrlcc", escape = F) %>% 
   kable_styling("hover", full_width = F) %>%
-  column_spec(5,width = "3cm") %>% column_spec(7,width = "3cm") %>%
-  row_spec(which(region_tab$Région=='27'),background = "#E0FFFF75",  bold = T , color = "steelblue")%>%
-  row_spec(nrow(region_tab),bold = T,color = "navy") %>%  
+  column_spec(5,width = "3cm") %>% 
+  column_spec(7,width = "3cm") %>%
+  row_spec(which(region_tab$Région=='27'),
+           background = "#E0FFFF75",  bold = T , color = "steelblue")%>%
+  row_spec(nrow(region_tab),
+           bold = T,color = "navy") %>%  
   add_header_above(c(" " = 3, "Jeunes" =3, "Population âgée" = 3," ")) %>%
-  footnote(general = " Insee RP2019", general_title = "Source : ",
+  footnote(general = " Insee RP2019", 
+           general_title = "Source : ",
            number = "Nombre de -20 ans / nombre de + 60 ans",
            footnote_as_chunk = T) 
 
@@ -60,40 +63,48 @@ region_tab %>%
 
 ### Structure régionale
 ```{r}
-hchart( region %>%  dplyr::select(REG,LIBGEO,p20,p60,pop) %>%
-          transmute(REG,LIBGEO,`1_21 à 59 ans`=round(100*(pop-p20-p60)/pop,2),
-                 `2_Moins de 20 ans`=round(100*p20/pop,2),
-                 `0_Plus de 60 ans`=round(100*p60/pop,2) ) %>%
-    pivot_longer(-c('REG','LIBGEO'),'âge') %>% rename(région=LIBGEO,part=value) %>%
-      arrange(REG,région,âge) , 
-    "bar",  hcaes(x = région, y = part, group = âge) ,
-    stacking = "percent" , reverse = T,
-      showInLegend = T,  pointWidth =20) %>%
+hchart( region %>%  
+          dplyr::select(REG,LIBGEO,p20,p60,pop) %>%
+          transmute(REG,LIBGEO,
+                    `1_21 à 59 ans`=round(100*(pop-p20-p60)/pop,2),
+                    `2_Moins de 20 ans`=round(100*p20/pop,2),
+                    `0_Plus de 60 ans`=round(100*p60/pop,2) ) %>%
+          pivot_longer(-c('REG','LIBGEO'),'âge') %>% 
+          rename(région=LIBGEO,part=value) %>%
+          arrange(REG,région,âge) , 
+  "bar",  hcaes(x = région, y = part, group = âge) ,
+          stacking = "percent" , reverse = T, showInLegend = T,  pointWidth =20) %>%
   #hc_yAxis(categories = lvls) %>%
   hc_add_theme(thm) 
 ```
 
 ### Carte régionale
 ```{r}
-leaflet(regwgs) %>%  addProviderTiles(providers$CartoDB.Positron) %>%
+leaflet(regwgs) %>%  
+  addProviderTiles(providers$CartoDB.Positron) %>%
   setView(lng = 5.1, lat = 47.27, zoom = 6) %>%
-  addPolygons(fillColor = ~pal(ind_jeun), weight = 2,opacity = 0.6,
-              color = "#2F4F4F",fillOpacity = 0.7, smoothFactor = 2 ) %>% 
-  addPolygons(data=reg27carto,group  = "BFC",fill = F,color="#9370DB",weight = 5,opacity = 1, smoothFactor = 5) %>%
-   addCircles(centroid(regwgs)[,1],centroid(regwgs)[,2],weight=4,
-             radius = ~100*p1529^(1/2), color = "#4169E1",
+  addPolygons(fillColor = ~pal(ind_jeun), fillOpacity = 0.7,
+              color = "#2F4F4F", weight = 2,opacity = 0.6, 
+              smoothFactor = 2 ) %>% 
+  addPolygons(data=reg27carto,group  = "BFC",
+              color="#9370DB",weight = 5,opacity = 1, 
+              fill = F, smoothFactor = 5) %>%
+   addCircles(centroid(regwgs)[,1],centroid(regwgs)[,2],
+             radius = ~100*p1529^(1/2), 
+             color = "#4169E1", weight=4,
              fillColor = ~pal2(100*p1529/pop), fillOpacity = 0.7,
-             highlight = highlightOptions (fillOpacity =  0.4,
-               weight = 5,   color = "#00FFFF"),
-             popup = popupTable(regwgs@data %>% 
-                           select(Région=INSEE_REG) %>%
-                           left_join(.,region_tab %>%
-                      select(Région,Nom,Population,`15-29 ans`,
-                             `Taux<br>15/29`,`65 ans et +`,
-                             `Taux<br>>65 ans`,"indice jeunesse"=ind_jeun)
-                             ,by="Région"),
-                      feature.id=F,row.numbers = F) )%>%
- addLegend(pal = pal, values =  regwgs$ind_jeun, opacity = 0.7, title = "indice de jeunesse", position = "bottomright") %>%
+             highlight = highlightOptions (
+                             color = "#00FFFF", weight = 5,fillOpacity =  0.4 ),
+             popup = popupTable(regwgs@data %>%
+                                  select(Région=INSEE_REG) %>%
+                                  left_join(.,region_tab %>%
+                                              select(Région,Nom,Population,`15-29 ans`,
+                                                     `Taux<br>15/29`,`65 ans et +`,
+                                                     `Taux<br>>65 ans`,"indice jeunesse"=ind_jeun)
+                                            ,by="Région"),
+                                feature.id=F,row.numbers = F) ) %>%
+  addLegend(pal = pal, values =  regwgs$ind_jeun, opacity = 0.7, 
+            title = "indice de jeunesse", position = "bottomright") %>%
   addLegend(pal = pal2,values = regwgs$prop1529,opacity = 0.7,title = "taux de 15/29 ans",labFormat = labelFormat(suffix =  " %"),position = "bottomright")
 ```
 
@@ -120,31 +131,37 @@ dep27_tab %>%
  select(Région, Département,Nom,Population,`15-29 ans`,`Taux<br>15/29`, `Taux femmes<br>15/29`,
          `65 ans et +`,`Taux<br>>65 ans`,`Taux femmes<br>>65 ans`, ind_jeun) %>%
   rename("indice jeunesse <sup>1</sup>"=ind_jeun) %>%
+  
   kable("html", format.args = list(decimal.mark = ",", big.mark = "'"),
-      align="cclrrlcrlcc",
-      escape = F) %>% 
+      align="cclrrlcrlcc", escape = F) %>% 
   kable_styling("hover", full_width = F) %>%
-  column_spec(5,width = "3cm") %>% column_spec(7,width = "3cm") %>%
-  row_spec(nrow(dep27_tab)-1,bold = T,color = "steelblue") %>%
-  row_spec(nrow(dep27_tab),bold = T,color = "navy") %>%
+  column_spec(5,width = "3cm") %>% 
+  column_spec(7,width = "3cm") %>%
+  row_spec(nrow(dep27_tab)-1,
+           bold = T,color = "steelblue") %>%
+  row_spec(nrow(dep27_tab),
+           bold = T,color = "navy") %>%
   add_header_above(c(" " = 4, "Jeunes" =3, "Pop âgée" = 3," ")) %>%
-  footnote(general = " Insee RP2019", general_title = "Source : ",
+  footnote(general = " Insee RP2019", 
+           general_title = "Source : ",
            number = "Nombre de -20 ans / nombre de + 60 ans",
            footnote_as_chunk = T) 
 ```
 
 ### Structure départementale
 ```{r}
-hchart( departement %>% filter(DEP %in% depbfc) %>%
+hchart( departement %>% 
+          filter(DEP %in% depbfc) %>%
           dplyr::select(DEP,LIBGEO,p20,p60,pop) %>%
-          transmute(DEP,LIBGEO,`1_21 à 59 ans`=round(100*(pop-p20-p60)/pop,2),
-                 `2_Moins de 20 ans`=round(100*p20/pop,2),
-                 `0_Plus de 60 ans`=round(100*p60/pop,2) ) %>%
-    pivot_longer(-c('DEP','LIBGEO'),'âge') %>% rename(Département=LIBGEO,part=value) %>%
-      arrange(DEP,Département,âge) , 
-    "bar",  hcaes(x = Département, y = part, group = âge) ,
-    stacking = "percent" , reverse = T,
-      showInLegend = T,  pointWidth =20) %>%
+          transmute(DEP,LIBGEO,
+                    `1_21 à 59 ans`=round(100*(pop-p20-p60)/pop,2),
+                    `2_Moins de 20 ans`=round(100*p20/pop,2),
+                    `0_Plus de 60 ans`=round(100*p60/pop,2) ) %>%
+          pivot_longer(-c('DEP','LIBGEO'),'âge') %>% 
+          rename(Département=LIBGEO,part=value) %>%
+          arrange(DEP,Département,âge) , 
+  "bar",  hcaes(x = Département, y = part, group = âge) ,
+          stacking = "percent" , reverse = T, showInLegend = T,  pointWidth =20) %>%
   #hc_yAxis(categories = lvls) %>%
   hc_add_theme(thm) 
 ```
@@ -152,27 +169,36 @@ hchart( departement %>% filter(DEP %in% depbfc) %>%
 
 ### Carte départementale
 ```{r}
-leaflet(depwgs) %>% addProviderTiles(providers$CartoDB.Positron) %>%
+leaflet(depwgs) %>% 
+  addProviderTiles(providers$CartoDB.Positron) %>%
   setView(lng = 5.1, lat = 47.27, zoom = 6) %>%
-  addPolygons(fillColor = ~pal(ind_jeun), weight = 2,opacity = 0.6,
-              color = "#2F4F4F",fillOpacity = 0.7, smoothFactor = 2 ) %>%
-  addPolygons(data=reg27carto,group  = "BFC",fill = F,color="#9370DB",weight = 5,opacity = 1, smoothFactor = 5) %>%
-  addPolygons(data=dep27carto,group  = "départements",fill = F,color="#9370DB",weight = 3,opacity = 1, smoothFactor = 5) %>%
+  addPolygons(fillColor = ~pal(ind_jeun), fillOpacity = 0.7,
+              color = "#2F4F4F",weight = 2,opacity = 0.6, 
+              smoothFactor = 2 ) %>%
+  addPolygons(data=reg27carto,group  = "BFC",
+              color="#9370DB",weight = 5,opacity = 1, 
+              fill = F, smoothFactor = 5) %>%
+  addPolygons(data=dep27carto,group  = "départements",
+              color="#9370DB",weight = 3,opacity = 1, 
+              fill = F, smoothFactor = 5) %>%
    addCircles(centroid(depwgs)[,1],centroid(depwgs)[,2],
-             radius = ~100*p1529^(1/2), color = "#4169E1",weight=4,
+             radius = ~100*p1529^(1/2), 
+             color = "#4169E1",weight=4,
              fillColor = ~pal2(prop1529), fillOpacity = 0.7,
-             highlight = highlightOptions (fillOpacity =  0.4,
-               weight = 5,   color = "#00FFFF"),
+             highlight = highlightOptions (
+                          color = "#00FFFF",  weight = 5, fillOpacity =  0.4 ),
              popup = popupTable(depwgs@data %>% 
-                           select(Département=INSEE_DEP) %>%
-                           left_join(.,dep_tab %>%
-                      select(Région,Département,Nom,Population,`15-29 ans`,
-                             `Taux<br>15/29`,`65 ans et +`,
-                             `Taux<br>>65 ans`,"indice jeunesse"=ind_jeun)
-                             ,by="Département"),
-                      feature.id=F,row.numbers = F))%>%
- addLegend(pal = pal, values =  regwgs$ind_jeun, opacity = 0.7, title = "indice de jeunesse", position = "bottomright") %>%
-  addLegend(pal = pal2,values = regwgs$prop1529,opacity = 0.7,title = "taux de 15/29 ans",labFormat = labelFormat(suffix =  " %"),position = "bottomright")
+                                  select(Département=INSEE_DEP) %>%
+                                  left_join(.,dep_tab %>%
+                                              select(Région,Département,Nom,Population,`15-29 ans`,
+                                                     `Taux<br>15/29`,`65 ans et +`,
+                                                     `Taux<br>>65 ans`,"indice jeunesse"=ind_jeun)
+                                            ,by="Département"),
+                                feature.id=F,row.numbers = F))%>%
+  addLegend(pal = pal, values =  regwgs$ind_jeun, opacity = 0.7, 
+            title = "indice de jeunesse", position = "bottomright") %>%
+  addLegend(pal = pal2,values = regwgs$prop1529,opacity = 0.7,
+            title = "taux de 15/29 ans",labFormat = labelFormat(suffix =  " %"),position = "bottomright")
 ```
 
 ![](images/BFC_EPCI_s.svg) EPCI {data-orientation="rows" height=30}
@@ -190,15 +216,19 @@ epci27_tab %>%
   select(EPCI,Nom,Population,`15-29 ans`,`Taux<br>15/29`, `Taux femmes<br>15/29`,
          `65 ans et +`,`Taux<br>>65 ans`,`Taux femmes<br>>65 ans`, ind_jeun) %>%
   rename("indice jeunesse <sup>1</sup>"=ind_jeun) %>%
+  
   kable("html", format.args = list(decimal.mark = ",", big.mark = "'"),
-      align="clrrlcrlcc",
-      escape = F) %>% 
+      align="clrrlcrlcc", escape = F) %>% 
   kable_styling("hover", full_width = F) %>%
-  column_spec(5,width = "3cm") %>% column_spec(7,width = "3cm") %>%
-  row_spec(nrow(epci27_tab)-1,bold = T,color = "steelblue") %>%
-  row_spec(nrow(epci27_tab),bold = T,color = "navy") %>%
+  column_spec(5,width = "3cm") %>% 
+  column_spec(7,width = "3cm") %>%
+  row_spec(nrow(epci27_tab)-1,
+           bold = T,color = "steelblue") %>%
+  row_spec(nrow(epci27_tab),
+           bold = T,color = "navy") %>%
   add_header_above(c(" " = 3, "Jeunes" =3, "Pop âgée" = 3," ")) %>%
-  footnote(general = " Insee RP2019", general_title = "Source : ",
+  footnote(general = " Insee RP2019", 
+           general_title = "Source : ",
            number = "Nombre de -20 ans / nombre de + 60 ans",
            footnote_as_chunk = T) 
 ```
@@ -207,28 +237,35 @@ epci27_tab %>%
 
 ### Carte ECPI
 ```{r}
-leaflet(epcicarto) %>% addProviderTiles(providers$CartoDB.Positron) %>%
+leaflet(epcicarto) %>% 
+  addProviderTiles(providers$CartoDB.Positron) %>%
   setView(lng = 5.1, lat = 47.27, zoom = 8) %>%
-  
-  addPolygons(fillColor = ~pal(ind_jeun), weight = 1,opacity = 0.6,
-              color = "#2F4F4F",fillOpacity = 0.7 ) %>%
-  addPolygons(data=reg27carto,group  = "BFC",fill = F,color="#9370DB",weight = 5,opacity = 1, smoothFactor = 5) %>%
-  addPolygons(data=dep27carto,group  = "départements",fill = F,color="#9370DB",weight = 3,opacity = 1, smoothFactor = 5) %>%
+  addPolygons(fillColor = ~pal(ind_jeun),  fillOpacity = 0.7,
+               color = "#2F4F4F", weight = 1,opacity = 0.6 ) %>%
+  addPolygons(data=reg27carto,group  = "BFC",
+              color="#9370DB",weight = 5,opacity = 1, 
+              fill = F, smoothFactor = 5) %>%
+  addPolygons(data=dep27carto,group  = "départements",
+              color="#9370DB",weight = 3,opacity = 1, 
+              fill = F, smoothFactor = 5) %>%
      addCircles(centroid(epcicarto)[,1],centroid(epcicarto)[,2],
-             radius = ~100*p1529^(1/2), color = "#4169E1",weight=4,
+             radius = ~100*p1529^(1/2), 
+             color = "#4169E1",weight=4,
              fillColor = ~pal2(prop1529), fillOpacity = 0.7,
-             highlight = highlightOptions (fillOpacity =  0.4,
-               weight = 5,   color = "#00FFFF"),
+             highlight = highlightOptions (
+                          color = "#00FFFF",  weight = 5, fillOpacity =  0.4 ),
             popup = popupTable(epcicarto@data %>% 
-                           select(EPCI=CODE_EPCI) %>%
-                           left_join(.,epci27_tab %>%
-                      select(EPCI,Nom,Population,`15-29 ans`,
-                             `Taux<br>15/29`,`65 ans et +`,
-                             `Taux<br>>65 ans`,"indice jeunesse"=ind_jeun)
-                             ,by="EPCI"),
-                      feature.id=F,row.numbers = F) ) %>%
- addLegend(pal = pal, values =  regwgs$ind_jeun, opacity = 0.7, title = "indice de jeunesse", position = "bottomright") %>%
-  addLegend(pal = pal2,values = regwgs$prop1529,opacity = 0.7,title = "taux de 15/29 ans",labFormat = labelFormat(suffix =  " %"),position = "bottomright")
+                                 select(EPCI=CODE_EPCI) %>%
+                                 left_join(.,epci27_tab %>%
+                                             select(EPCI,Nom,Population,`15-29 ans`,
+                                                    `Taux<br>15/29`,`65 ans et +`,
+                                                    `Taux<br>>65 ans`,"indice jeunesse"=ind_jeun)
+                                           ,by="EPCI"),
+                               feature.id=F,row.numbers = F) ) %>%
+ addLegend(pal = pal, values =  regwgs$ind_jeun, opacity = 0.7, 
+           title = "indice de jeunesse", position = "bottomright") %>%
+  addLegend(pal = pal2,values = regwgs$prop1529,opacity = 0.7,
+            title = "taux de 15/29 ans",labFormat = labelFormat(suffix =  " %"),position = "bottomright")
 ```
   
   
@@ -247,15 +284,19 @@ bv27_tab %>%
   select(BV2012,Nom,Population,`15-29 ans`,`Taux<br>15/29`, `Taux femmes<br>15/29`,
          `65 ans et +`,`Taux<br>>65 ans`,`Taux femmes<br>>65 ans`, ind_jeun) %>%
   rename("indice jeunesse <sup>1</sup>"=ind_jeun) %>%
+  
   kable("html", format.args = list(decimal.mark = ",", big.mark = "'"),
-      align="clrrlcrlcc",
-      escape = F) %>% 
+      align="clrrlcrlcc", escape = F) %>% 
   kable_styling("hover", full_width = F) %>%
-  column_spec(5,width = "3cm") %>% column_spec(7,width = "3cm") %>%
-  row_spec(nrow(bv27_tab)-1,bold = T,color = "steelblue") %>%
-  row_spec(nrow(bv27_tab),bold = T,color = "navy") %>%
+  column_spec(5,width = "3cm") %>% 
+  column_spec(7,width = "3cm") %>%
+  row_spec(nrow(bv27_tab)-1,
+           bold = T,color = "steelblue") %>%
+  row_spec(nrow(bv27_tab),
+           bold = T,color = "navy") %>%
   add_header_above(c(" " = 3, "Jeunes" =3, "Pop âgée" = 3," ")) %>%
-  footnote(general = " Insee RP2019", general_title = "Source : ",
+  footnote(general = " Insee RP2019", 
+           general_title = "Source : ",
            number = "Nombre de -20 ans / nombre de + 60 ans",
            footnote_as_chunk = T) 
 ```  
@@ -264,28 +305,35 @@ bv27_tab %>%
   
 ### Carte BV
 ```{r}
-leaflet(bvcarto) %>% addProviderTiles(providers$CartoDB.Positron) %>%
+leaflet(bvcarto) %>% 
+  addProviderTiles(providers$CartoDB.Positron) %>%
   setView(lng = 5.1, lat = 47.27, zoom = 8) %>%
-  addPolygons(fillColor = ~pal(ind_jeun), weight = 1,opacity = 0.6,
-              color = "#2F4F4F",fillOpacity = 0.7 ) %>%
-  addPolygons(data=reg27carto,group  = "BFC",fill = F,color="#9370DB",weight = 5,opacity = 1, smoothFactor = 5) %>%
-  addPolygons(data=dep27carto,group  = "départements",fill = F,color="#9370DB",weight = 3,opacity = 1, smoothFactor = 5) %>%
-  
-     addCircles(centroid(bvcarto)[,1],centroid(bvcarto)[,2],
-             radius = 100*bvcarto$p1529^(1/2), color = "#4169E1", opacity = 0.8, weight=4,
+  addPolygons(fillColor = ~pal(ind_jeun), fillOpacity = 0.7 ,
+              color = "#2F4F4F",weight = 1,opacity = 0.6 ) %>%
+  addPolygons(data=reg27carto,group  = "BFC",
+              color="#9370DB",weight = 5,opacity = 1, 
+              fill = F, smoothFactor = 5) %>%
+  addPolygons(data=dep27carto,group  = "départements",
+              color="#9370DB",weight = 3,opacity = 1, 
+              fill = F, smoothFactor = 5) %>%
+  addCircles(centroid(bvcarto)[,1],centroid(bvcarto)[,2],
+             radius = 100*bvcarto$p1529^(1/2), 
+             color = "#4169E1", opacity = 0.8, weight=4,
              fillColor = ~pal2(prop1529), fillOpacity = 0.7,
-              highlight = highlightOptions (fillOpacity =  0.4,
-               weight = 5,   color = "#00FFFF"),
+             highlight = highlightOptions (
+                          color = "#00FFFF",  weight = 5, fillOpacity =  0.4 ),
              popup = popupTable(bvcarto@data %>% 
-                           select(BV2012) %>%
-                           left_join(.,bv27_tab %>%
-                      select(BV2012,Nom,Population,`15-29 ans`,
-                             `Taux<br>15/29`,`65 ans et +`,
-                             `Taux<br>>65 ans`,"indice jeunesse"=ind_jeun)
-                             ,by="BV2012"),
-                      feature.id=F,row.numbers = F))%>%
- addLegend(pal = pal, values =  regwgs$ind_jeun, opacity = 0.7, title = "indice de jeunesse", position = "bottomright") %>%
-  addLegend(pal = pal2,values = regwgs$prop1529,opacity = 0.7,title = "taux de 15/29 ans",labFormat = labelFormat(suffix =  " %"),position = "bottomright")
+                                  select(BV2012) %>%
+                                  left_join(.,bv27_tab %>%
+                                              select(BV2012,Nom,Population,`15-29 ans`,
+                                                     `Taux<br>15/29`,`65 ans et +`,
+                                                     `Taux<br>>65 ans`,"indice jeunesse"=ind_jeun)
+                                            ,by="BV2012"),
+                                feature.id=F,row.numbers = F))%>%
+  addLegend(pal = pal, values =  regwgs$ind_jeun, opacity = 0.7, 
+            title = "indice de jeunesse", position = "bottomright") %>%
+  addLegend(pal = pal2,values = regwgs$prop1529,opacity = 0.7,
+            title = "taux de 15/29 ans",labFormat = labelFormat(suffix =  " %"),position = "bottomright")
 ```
 
 
