--- a/2.1_jeunesse.Rmd
+++ b/2.1_jeunesse.Rmd
@@ -49,15 +49,17 @@ region_tab %>%
                            color="green")
                  ) ) %>%
   relocate(" ",.before=delta) %>%
-kable("html", 
-      format.args = list(decimal.mark = ",", big.mark = "'"),
-      align="clrllcrllc",
-      escape = F) %>% 
+  
+  kable("html", format.args = list(decimal.mark = ",", big.mark = "'"),
+      align="clrllcrllc", escape = F) %>% 
   kable_styling("hover", full_width = F) %>%
-  row_spec(which(region_tab$Région=='27'),background = "#E0FFFF75",  bold = T , color = "steelblue")%>%
-  row_spec(nrow(region_tab),bold = T,color = "navy") %>%  
+  row_spec(which(region_tab$Région=='27'),
+           background = "#E0FFFF75",  bold = T , color = "steelblue")%>%
+  row_spec(nrow(region_tab),
+           bold = T,color = "navy") %>%  
   add_header_above(c(" " = 5, "évolution 2013 - 2019" =4, " ")) %>%
-  footnote(general = " Insee RP2013, RP2019", general_title = "Source : ",
+  footnote(general = " Insee RP2013, RP2019", 
+           general_title = "Source : ",
            number = "Nombre de -20 ans / nombre de + 60 ans",
            footnote_as_chunk = T) 
 ```
@@ -67,24 +69,32 @@ kable("html",
 ```{r}
 #pal3 <- colorQuantile("RdYlBu", domain =region$evol1529 ,probs = seq(0, 1, 0.2) , reverse = T)
 
-leaflet(regwgs) %>% addProviderTiles(providers$CartoDB.Positron) %>% 
+leaflet(regwgs) %>% 
+  addProviderTiles(providers$CartoDB.Positron) %>% 
   setView(lng = 5.1, lat = 47.27, zoom = 6) %>%
-  addPolygons(fillColor = ~pal2(prop1529), weight = 2,opacity = 0.6,
-              color = "#2F4F4F",fillOpacity = 0.6, smoothFactor = 2 ) %>% 
-  addPolygons(data=reg27carto,group  = "BFC",fill = F,color="#9370DB",weight = 5,opacity = 1, smoothFactor = 5) %>%
+  addPolygons(fillColor = ~pal2(prop1529), fillOpacity = 0.6, 
+              color = "#2F4F4F",weight = 2,opacity = 0.6, 
+              smoothFactor = 2 ) %>% 
+  addPolygons(data=reg27carto,group  = "BFC",
+              color="#9370DB",weight = 5,opacity = 1, 
+              fill = F, smoothFactor = 5) %>%
   addCircles(centroid(regwgs)[,1],centroid(regwgs)[,2],
-             radius = ~50*p1529^(1/2), weight=4,
-             color = "#4169E1", opacity = 0.8,
+             radius = ~50*p1529^(1/2), 
+             color = "#4169E1", weight=4, opacity = 0.8,
              fillColor = ~pal3(evol1529), fillOpacity = 0.8,
-             highlight = highlightOptions (fillOpacity =  0.1,
-             weight = 5,   color = "#00FFFF"),
+             highlight = highlightOptions (
+                          color = "#00FFFF",  weight = 5, fillOpacity =  0.4 ),
              popup = popupTable(regwgs@data %>% 
                                    select(Région=INSEE_REG) %>%
-                                   left_join(.,region_tab %>% select(Région,Nom,`15-29 ans`,`Taux<br>15/29`,`evo15/29`,`Taux<br>16/25`,`evo16/25`,ind_jeun)
+                                   left_join(.,region_tab %>% 
+                                               select(Région,Nom,`15-29 ans`,`Taux<br>15/29`,
+                                                      `evo15/29`,`Taux<br>16/25`,`evo16/25`,ind_jeun)
                                              ,by="Région"),
-                                 feature.id=F,row.numbers = F)) %>%
- addLegend(pal = pal3, values =  regwgs$evol1529, opacity = 0.7, title = "évolution des 15/29 ans", position = "bottomright") %>%
-  addLegend(pal = pal2,values = regwgs$prop1529,opacity = 0.7,title = "taux de 15/29 ans",labFormat = labelFormat(suffix =  " %"),position = "bottomright")
+                                feature.id=F,row.numbers = F)) %>%
+  addLegend(pal = pal3, values =  regwgs$evol1529, opacity = 0.7, 
+           title = "évolution des 15/29 ans", position = "bottomright") %>%
+  addLegend(pal = pal2,values = regwgs$prop1529,opacity = 0.7,
+            title = "taux de 15/29 ans",labFormat = labelFormat(suffix =  " %"),position = "bottomright")
 ```
 
 ![](images/BFC_dep_s.svg) Départements {data-orientation="rows" height=30}
@@ -116,15 +126,17 @@ as.data.frame(dep27_tab) %>%
                            color="green")
                  ) ) %>%
   relocate(" ",.before=delta) %>%
-  kable("html", 
-      format.args = list(decimal.mark = ",", big.mark = "'"),
-      align="cllrllcrllc",
-      escape = F) %>% 
+  
+  kable("html", format.args = list(decimal.mark = ",", big.mark = "'"),
+      align="cllrllcrllc", escape = F) %>% 
   kable_styling("hover", full_width = F) %>%
-  row_spec(nrow(dep27_tab)-1,bold = T,color = "steelblue") %>%
-  row_spec(nrow(dep27_tab),bold = T,color = "navy") %>%
+  row_spec(nrow(dep27_tab)-1,
+           bold = T,color = "steelblue") %>%
+  row_spec(nrow(dep27_tab),
+           bold = T,color = "navy") %>%
   add_header_above(c(" " = 6, "évolution 2013 - 2019" =4, " ")) %>%
-  footnote(general = " Insee RP2013, RP2019", general_title = "Source : ",
+  footnote(general = " Insee RP2013, RP2019", 
+           general_title = "Source : ",
            number = "Nombre de -20 ans / nombre de + 60 ans",
            footnote_as_chunk = T) 
 ```
@@ -132,25 +144,35 @@ as.data.frame(dep27_tab) %>%
 ### Carte départementale
 
 ```{r}
-leaflet(depwgs) %>% addProviderTiles(providers$CartoDB.Positron) %>% 
+leaflet(depwgs) %>% 
+  addProviderTiles(providers$CartoDB.Positron) %>% 
   setView(lng = 5.1, lat = 47.27, zoom = 6) %>%
-  addPolygons(fillColor = ~pal2(prop1529), weight = 2,opacity = 0.6,
-              color = "#2F4F4F",fillOpacity = 0.6, smoothFactor = 2 ) %>%  
-  addPolygons(data=reg27carto,group  = "BFC",fill = F,color="#9370DB",weight = 5,opacity = 1, smoothFactor = 5) %>%
-  addPolygons(data=dep27carto,group  = "départements",fill = F,color="#9370DB",weight = 3 ,opacity = 1, smoothFactor = 5) %>%
+  addPolygons(fillColor = ~pal2(prop1529), fillOpacity = 0.6,
+              color = "#2F4F4F",weight = 2,opacity = 0.6,
+              smoothFactor = 2 ) %>%  
+  addPolygons(data=reg27carto,group  = "BFC",
+              color="#9370DB",weight = 5,opacity = 1, 
+              fill = F, smoothFactor = 5) %>%
+  addPolygons(data=dep27carto,group  = "départements",
+              color="#9370DB",weight = 3 ,opacity = 1, 
+              fill = F, smoothFactor = 5) %>%
   addCircles(centroid(depwgs)[,1],centroid(depwgs)[,2],
-             radius = ~50*p1529^(1/2), weight=4,
-             color = "#4169E1", opacity = 0.8,
+             radius = ~50*p1529^(1/2),
+             color = "#4169E1", weight=4, opacity = 0.8,
              fillColor = ~pal3(evol1529), fillOpacity = 0.8,
-             highlight = highlightOptions (fillOpacity =  0.1,
-             weight = 5,   color = "#00FFFF"),
+             highlight = highlightOptions (
+                          color = "#00FFFF",  weight = 5, fillOpacity =  0.4 ),
              popup = popupTable(depwgs@data %>% 
                                    select(Département=INSEE_DEP) %>%
-                                   left_join(.,dep_tab %>% select(Département,Nom,`15-29 ans`,`Taux<br>15/29`,`evo15/29`,`Taux<br>16/25`,`evo16/25`,ind_jeun)
+                                   left_join(.,dep_tab %>% 
+                                               select(Département,Nom,`15-29 ans`,`Taux<br>15/29`,`evo15/29`,
+                                                      `Taux<br>16/25`,`evo16/25`,ind_jeun)
                                              ,by="Département"),
-                                 feature.id=F,row.numbers = F)) %>%
- addLegend(pal = pal3, values =  regwgs$p1529, opacity = 0.7, title = "évolution des 15/29 ans", position = "bottomright") %>%
-  addLegend(pal = pal2,values = regwgs$prop1529,opacity = 0.7,title = "taux de 15/29 ans",labFormat = labelFormat(suffix =  " %"),position = "bottomright")
+                                feature.id=F,row.numbers = F)) %>%
+  addLegend(pal = pal3, values =  regwgs$p1529, opacity = 0.7, 
+           title = "évolution des 15/29 ans", position = "bottomright") %>%
+  addLegend(pal = pal2,values = regwgs$prop1529,opacity = 0.7,
+            title = "taux de 15/29 ans",labFormat = labelFormat(suffix =  " %"),position = "bottomright")
 ```
 
 
@@ -176,15 +198,17 @@ epci27_tab %>%
                            color="green")
                  ) ) %>%
   relocate(" ",.before=delta) %>%
-  kable("html", 
-      format.args = list(decimal.mark = ",", big.mark = "'"),
-      align="clrllcrllc",
-      escape = F) %>% 
+  
+  kable("html", format.args = list(decimal.mark = ",", big.mark = "'"),
+      align="clrllcrllc", escape = F) %>% 
   kable_styling("hover", full_width = F) %>%
-  row_spec(nrow(epci27_tab)-1,bold = T,color = "steelblue") %>%
-  row_spec(nrow(epci27_tab),bold = T,color = "navy") %>%
+  row_spec(nrow(epci27_tab)-1,
+           bold = T,color = "steelblue") %>%
+  row_spec(nrow(epci27_tab),
+           bold = T,color = "navy") %>%
   add_header_above(c(" " = 5, "évolution 2013 - 2019" =4, " ")) %>%
-  footnote(general = " Insee RP2013, RP2019", general_title = "Source : ",
+  footnote(general = " Insee RP2013, RP2019", 
+           general_title = "Source : ",
            number = "Nombre de -20 ans / nombre de + 60 ans",
            footnote_as_chunk = T) 
 ```
@@ -195,25 +219,34 @@ epci27_tab %>%
   
 ```{r,echo=F}
 
-leaflet(epcicarto) %>% addProviderTiles(providers$CartoDB.Positron) %>% 
+leaflet(epcicarto) %>% 
+  addProviderTiles(providers$CartoDB.Positron) %>% 
   setView(lng = 5.1, lat = 47.27, zoom = 8) %>%
-  addPolygons(fillColor = ~pal2(prop1529), weight = 2,opacity = 0.6,
-              color = "#2F4F4F",fillOpacity = 0.6 ) %>% 
-  addPolygons(data=reg27carto,group  = "BFC",fill = F,color="#9370DB",weight = 5,opacity = 1, smoothFactor = 5) %>%
-  addPolygons(data=dep27carto,group  = "départements",fill = F,color="#9370DB",weight = 3,opacity = 1, smoothFactor = 5) %>%
+  addPolygons(fillColor = ~pal2(prop1529), fillOpacity = 0.6,
+              color = "#2F4F4F",weight = 2,opacity = 0.6 ) %>% 
+  addPolygons(data=reg27carto,group  = "BFC",
+              color="#9370DB",weight = 5,opacity = 1, 
+              fill = F, smoothFactor = 5) %>%
+  addPolygons(data=dep27carto,group  = "départements",
+              color="#9370DB",weight = 3,opacity = 1, 
+              fill = F, smoothFactor = 5) %>%
   addCircles(centroid(epcicarto)[,1],centroid(epcicarto)[,2],
-             radius = ~50*p1529^(1/2), weight=4,
-             color = "#4169E1", opacity = 0.8,
+             radius = ~50*p1529^(1/2),
+             color = "#4169E1", weight=4, opacity = 0.8,
              fillColor = ~pal3(evol1529), fillOpacity = 0.8,
-             highlight = highlightOptions (fillOpacity =  0.1,
-             weight = 5,   color = "#00FFFF"),
+             highlight = highlightOptions (
+                          color = "#00FFFF",  weight = 5, fillOpacity =  0.4 ),
              popup = popupTable(epcicarto@data %>% 
                                    select(EPCI=CODE_EPCI) %>%
-                                   left_join(.,epci27_tab %>% select(EPCI,Nom,`15-29 ans`,`Taux<br>15/29`,`evo15/29`,`Taux<br>16/25`,`evo16/25`,ind_jeun)
+                                   left_join(.,epci27_tab %>% 
+                                               select(EPCI,Nom,`15-29 ans`,`Taux<br>15/29`,`evo15/29`,
+                                                      `Taux<br>16/25`,`evo16/25`,ind_jeun)
                                              ,by="EPCI"),
-                                 feature.id=F,row.numbers = F)) %>%
- addLegend(pal = pal3, values =  regwgs$p1529, opacity = 0.7, title = "évolution des 15/29 ans", position = "bottomright") %>%
-  addLegend(pal = pal2,values = regwgs$prop1529,opacity = 0.7,title = "taux de 15/29 ans",labFormat = labelFormat(suffix =  " %"),position = "bottomright")
+                                feature.id=F,row.numbers = F)) %>%
+  addLegend(pal = pal3, values =  regwgs$p1529, opacity = 0.7, 
+           title = "évolution des 15/29 ans", position = "bottomright") %>%
+  addLegend(pal = pal2,values = regwgs$prop1529,opacity = 0.7,
+            title = "taux de 15/29 ans",labFormat = labelFormat(suffix =  " %"),position = "bottomright")
 ```
 
 ![](images/BFC_BV_s.svg) Bassins de vie {data-orientation="rows" height=30}
@@ -236,15 +269,17 @@ bv27_tab %>%
                            color="green")
                  ) ) %>%
   relocate(" ",.before=delta) %>%
-  kable("html", 
-      format.args = list(decimal.mark = ",", big.mark = "'"),
-      align="clrllcrllc",
-      escape = F) %>% 
+  
+  kable("html", format.args = list(decimal.mark = ",", big.mark = "'"),
+      align="clrllcrllc", escape = F) %>% 
   kable_styling("hover", full_width = F) %>%
-  row_spec(nrow(bv27_tab)-1,bold = T,color = "steelblue") %>%
-  row_spec(nrow(bv27_tab),bold = T,color = "navy") %>%
+  row_spec(nrow(bv27_tab)-1,
+           bold = T,color = "steelblue") %>%
+  row_spec(nrow(bv27_tab),
+           bold = T,color = "navy") %>%
   add_header_above(c(" " = 5, "évolution 2013 - 2019" =4, " ")) %>%
-  footnote(general = " Insee RP2013, RP2019", general_title = "Source : ",
+  footnote(general = " Insee RP2013, RP2019", 
+           general_title = "Source : ",
            number = "Nombre de -20 ans / nombre de + 60 ans",
            footnote_as_chunk = T) 
 ```  
@@ -254,25 +289,34 @@ bv27_tab %>%
 ### Carte BV
 
 ```{r,echo=F}
-leaflet(bvcarto) %>% addProviderTiles(providers$CartoDB.Positron) %>% 
+leaflet(bvcarto) %>% 
+  addProviderTiles(providers$CartoDB.Positron) %>% 
   setView(lng = 5.1, lat = 47.27, zoom = 8) %>%
-  addPolygons(fillColor = ~pal2(prop1529), weight = 2,opacity = 0.6,
-              color = "#2F4F4F",fillOpacity = 0.6 ) %>% 
-  addPolygons(data=reg27carto,group  = "BFC",fill = F,color="#9370DB",weight = 5,opacity = 1, smoothFactor = 5) %>%
-  addPolygons(data=dep27carto,group  = "départements",fill = F,color="#9370DB",weight = 3,opacity = 1, smoothFactor = 5) %>%
-    addCircles(centroid(bvcarto)[,1],centroid(bvcarto)[,2],
+  addPolygons(fillColor = ~pal2(prop1529), fillOpacity = 0.6,
+              color = "#2F4F4F",weight = 2,opacity = 0.6 ) %>% 
+  addPolygons(data=reg27carto,group  = "BFC",
+              color="#9370DB",weight = 5,opacity = 1, 
+              fill = F, smoothFactor = 5) %>%
+  addPolygons(data=dep27carto,group  = "départements",
+              color="#9370DB",weight = 3,opacity = 1, 
+              fill = F, smoothFactor = 5) %>%
+  addCircles(centroid(bvcarto)[,1],centroid(bvcarto)[,2],
              radius = ~50*p1529^(1/2), weight=4,
              color = "#4169E1", opacity = 0.8,
              fillColor = ~pal3(evol1529), fillOpacity = 0.8,
-             highlight = highlightOptions (fillOpacity =  0.1,
-             weight = 5,   color = "#00FFFF"),
+             highlight = highlightOptions (
+                          color = "#00FFFF",  weight = 5, fillOpacity =  0.4 ),
              popup = popupTable(bvcarto@data %>% 
                                    select(BV2012) %>%
-                                   left_join(.,bv27_tab %>% select(BV2012,Nom,`15-29 ans`,`Taux<br>15/29`,`evo15/29`,`Taux<br>16/25`,`evo16/25`,ind_jeun)
+                                   left_join(.,bv27_tab %>% 
+                                               select(BV2012,Nom,`15-29 ans`,`Taux<br>15/29`,`evo15/29`,
+                                                      `Taux<br>16/25`,`evo16/25`,ind_jeun)
                                              ,by="BV2012"),
-                                 feature.id=F,row.numbers = F)) %>%
- addLegend(pal = pal3, values =  regwgs$p1529, opacity = 0.7, title = "évolution des 15/29 ans", position = "bottomright") %>%
-  addLegend(pal = pal2,values = regwgs$prop1529,opacity = 0.7,title = "taux de 15/29 ans",labFormat = labelFormat(suffix =  " %"),position = "bottomright")
+                                feature.id=F,row.numbers = F)) %>%
+ addLegend(pal = pal3, values =  regwgs$p1529, opacity = 0.7, 
+           title = "évolution des 15/29 ans", position = "bottomright") %>%
+  addLegend(pal = pal2,values = regwgs$prop1529,opacity = 0.7,
+            title = "taux de 15/29 ans",labFormat = labelFormat(suffix =  " %"),position = "bottomright")
 ```
 
 
